# carbonpage_legacy

./: README.md  carbonpage.config.json  pyproject.toml
carbonpage/: main.py  templates.py  utils.py
carbonpage/renderer/: interface.py  jinja_renderer.py
templates/: macros.omit
templates/module/: __init__.py  controller.py
templates/{{ project.name }}/: readme.md
